[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Justin Kaufman <akaritakai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.10.9", features = ["blocking"] }
regex = "1.4.2"

[dev-dependencies]
httpmock = "0.5.2"
rand = "0.7.3"
tempfile = "3.1.0"
